--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ video {
 <!-- INTRO -->
 <div id="intro" class="section">
   <button class="back-btn" onclick="show('start')">Back</button>
-  <video src="videos/intro.mp4" id="introVideo" controls preload="metadata"></video>
+  <video src="https://drive.google.com/file/d/1amGyQcYKDT9LGnY1nQ8D7meCv-6J-uwG/view?usp=drive_link" id="introVideo" controls preload="metadata"></video>
   <br>
   <button id="skipBtn" style="display:none" onclick="show('map')">Skip</button>
 </div>
