--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ video {
 
 <div id="credits" class="section">
   <div class="glory-frame" id="gloryFrame">
-    <img id="gloryImage" src="https://nowallee.github.io/operation-vltd/videos/glory.jpg" alt="Glory Photo">
+    <img id="gloryImage" src="videos/glory.jpg" alt="Glory Photo">
     <div class="glory-placeholder" id="gloryPlaceholder" style="display:none">📸</div>
   </div>
   <p>Designed by you very glorious beauteous handsome amazing boyfriend.</p>
@@ -348,7 +348,8 @@ video {
 <!-- INTRO -->
 <div id="intro" class="section">
   <button class="back-btn" onclick="show('start')">Back</button>
-  <video src="https://nowallee.github.io/operation-vltd/videos/intro.mp4" id="introVideo" controls preload="metadata"></video>
+  <video src="videos/intro.mp4" id="introVideo" controls preload="metadata" type="video/mp4"></video>
+  <p id="introError" style="color:red;font-size:12px;display:none;margin-top:10px;"></p>
   <br>
   <button id="skipBtn" style="display:none" onclick="show('map')">Skip</button>
 </div>
@@ -364,7 +365,8 @@ video {
 <!-- LEVEL -->
 <div id="level" class="section">
   <button class="back-btn" onclick="show('map')">Back</button>
-  <video id="levelVideo" controls preload="metadata"></video>
+  <video id="levelVideo" controls preload="metadata" type="video/mp4"></video>
+  <p id="levelVideoError" style="color:red;font-size:12px;display:none;margin-top:10px;"></p>
   <p id="clue"></p>
   <input id="answer">
   <div id="errorMsg"></div>
@@ -411,7 +413,8 @@ together.
 <div id="finalVideo" class="section">
   <button class="back-btn" onclick="show('start')">Back</button>
   <button id="skipFinal" style="position:absolute;right:20px;top:18px;padding:8px 14px;border-radius:999px;background:rgba(0,0,0,0.25);border:1px solid rgba(255,255,255,0.06);color:var(--muted);" onclick="skipFinal()">Skip</button>
-  <video id="finalVideoPlayer" src="https://nowallee.github.io/operation-vltd/videos/final.mp4" controls></video>
+  <video id="finalVideoPlayer" src="videos/final.mp4" controls type="video/mp4"></video>
+  <p id="finalVideoPlayerError" style="color:red;font-size:12px;display:none;margin-top:10px;"></p>
 </div>
 
 <!-- FINAL CHOICE -->
@@ -584,10 +587,6 @@ function show(id){
       setupVideoAudioDucking(tv);
       // Force load the video
       tv.load();
-      // Try to play with a small delay
-      setTimeout(() => {
-        try { tv.play().catch(()=>{}); } catch(e) {}
-      }, 50);
     }
   }
 }
@@ -602,6 +601,21 @@ function setupVideoAudioDucking(videoElement){
   // Restore background music when video pauses or ends
   videoElement.onpause = ()=>{ bgm.volume = 0.15; };
   videoElement.onended = ()=>{ bgm.volume = 0.15; };
+  
+  // Add error handler to show what went wrong
+  videoElement.onerror = ()=>{
+    const errorMsg = document.getElementById(videoElement.id + "Error");
+    if(errorMsg){
+      const errorCodes = {
+        1: "MEDIA_ERR_ABORTED - playback aborted",
+        2: "MEDIA_ERR_NETWORK - network error",
+        3: "MEDIA_ERR_DECODE - decoding error",
+        4: "MEDIA_ERR_SRC_NOT_SUPPORTED - source not supported"
+      };
+      errorMsg.textContent = errorCodes[videoElement.error.code] || "Unknown error";
+      errorMsg.style.display = "block";
+    }
+  };
 }
 
 setTimeout(()=>document.getElementById("skipBtn").style.display="inline",5000);
@@ -654,7 +668,7 @@ function startLevel(i){
   current = i;
   isSubmitting = false; // Reset submission guard for new level
   // Set video source BEFORE showing the section
-  document.getElementById("levelVideo").src = `https://nowallee.github.io/operation-vltd/videos/day${i+1}.mp4`;
+  document.getElementById("levelVideo").src = `videos/day${i+1}.mp4`;
   show("level");
   document.getElementById("answer").value = "";
   document.getElementById("errorMsg").style.display = "none";
@@ -968,8 +982,7 @@ function skipSong(){
 }
 
 loadMap();
-// Start background music immediately on page load
-initBGM();
+// Background music will start when user clicks PLAY button via playMusicAndShow()
 </script>
 
 </body>
